--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
         "slug": "MyApp",
         "version": "1.0.0",
         "orientation": "default",
-        "icon": "./app/assets/icon.png",
+        "icon": "./assets/icon.png",
         "splash": {
-            "image": "./app/assets/splash.png",
+            "image": "./assets/splash.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
@@ -19,12 +19,12 @@
         },
         "android": {
             "adaptiveIcon": {
-                "foregroundImage": "./app/assets/adaptive-icon.png",
+                "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#FFFFFF"
             }
         },
         "web": {
-            "favicon": "./app/assets/favicon.png"
+            "favicon": "./assets/favicon.png"
         },
         "description": "My App Description Here"
     }
