--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@react-native-community/hooks": "^2.6.0",
+        "babel-plugin-module-resolver": "^4.1.0",
         "expo": "~42.0.1",
         "expo-status-bar": "~1.0.4",
         "react": "16.13.1",
